# gegl-fx

./: .gitignore  Makefile.am  configure.ac
operations/: Makefile.am
operations/core/: crop.c
operations/fx/: Makefile  Makefile.am  Makefile.in  fx-color.c  fx-fill.c  fx-gradient.c
po/: POTFILES.in
